--- a/style.css
+++ b/style.css
@@ -1,112 +1,73 @@
-body{
-    font-family: Arial, Helvetica, sans-serif0;
-    background-color: rgb(247, 242, 242);
-    font-size: 15px;
-    line-height: 1.5;
+*,
+*:before, 
+*:after{
     padding: 0;
     margin: 0;
-}
-
-*{
     box-sizing: border-box;
 }
-
+body{
+    background-color: #93f0e8;
+}
 .container{
-    width: 520px;
-    height: auto;
-    margin: 100px auto;
-    background-color: rgb(240, 230, 173);
-    border-radius: 25px;
-
+    width: 40%;
+    min-width: 450px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    padding: 50px 30px;
 }
-
-.base{
-    width: 100%;
-    margin: 0;
-    overflow: hidden;
-    display: block;
-    float: none;
-}
-
-.block{
-    width: 135px;
-    padding: 5px 20px;
-    margin-left: 20px;
-    display: inline-block;
-    /* float: left; */
-}
-
-.base h4{
-    font-size: 28px;
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: normal;
-    margin-top: 0px;
-    box-shadow: 0px 2px #dbcbcb;
-    background: rgba(212, 231, 234, 0.541);
-    font-size: 34px;
-    color: rgb(9, 9, 10);
-}
-
-.title{
-    font-size: 22px;
-    text-align: left;
-    font-family: sans-serif;
-    font-weight: normal;
-    line-height: 0.5;
-    letter-spacing: 0.5px;
-    word-spacing: 2.7px;
-    color: #282829;
-
-}
-
-input[type="text"] {
-    width: 140px;
-    margin: auto;
-    outline: none;
-    min-height: 50px;
-    border: 2px solid #000000;
-    padding: 12px;
-    background-color: #f7f7f7;
-    border-radius: 2px;
-    color: #131618;
-    font-size: 17px;
-}
-
-input[type="text"]:focus {
-    background-color: #ffffff;
-    border: 2px solid orange;
-    outline: none;
-}
-
-input[type="button"] {
-    width: 150px;
-    margin-left: 35%;
-    margin-top: 40px;
-    outline: none;
+.container *{
+    font-family: "Poppins",sans-serif;
     border: none;
-    padding: 14px 16px;
-    background-color:#01203c;
-    border-radius: 2px;
+    outline: none;
+}
+.inputs-wrapper{
+    background-color: #215897;
+    padding: 30px 25px;
+    border-radius: 8px;
+    box-shadow: 0 15px 20px rgba(32, 108, 151, 0.981);
+    margin-bottom: 50px;
+}
+input,
+button{
+    height: 50px;
+    background-color: #ffffff;
+    color: #000000;
+    font-weight: 500;
+    border-radius: 5px;
+}
+input{
+    width: 60%;
+    padding: 0 20px;
+    font-size: 14px;
+}
+button{
+    width: 30%;
+    float: right;
+}
+.outputs-wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.outputs-wrapper div{
+    height: 100px;
+    width: 100px;
+    background-color: #215897;
+    border-radius: 5px;
     color: #ffffff;
-    font-size: 16px;
+    display: grid;
+    place-items: center;
+    padding: 20px 0;
+    box-shadow: 0 15px 20px rgba(0,0,0,0.3);
 }
-
-input[type="button"]:hover {
-    background-color: #070708;
+span{
+    font-size: 30px;
+    font-weight: 500;
 }
-
-#age {
-    display: block;
-    margin: 10px;
-    margin-top: 35px;
-    padding: 10px;
-    scroll-padding-bottom: 20px;
-    overflow: hidden;
-    font-family: Verdana;
-    font-size: 23px;
-    font-weight: normal;
-    line-height: 1.5;
-    word-spacing: 2.7px;
-    color: rgb(16, 16, 20);
+p{
+    font-size: 14px;
+    color: #070606;
+    font-weight: 400;
 }
